Squaring up lat long number inputs

--- a/client/templates/tiles/image/tile_edit_image.html
+++ b/client/templates/tiles/image/tile_edit_image.html
@@ -9,7 +9,7 @@
             <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
             <span class="help-block">{{errorMessage 'image'}}</span>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your image..." value="{{text}}"></textarea>
-            {{> tileLocationControlEdit}}
+            {{> tileAdvancedOptionsEdit}}
         </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
