--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -5,7 +5,7 @@
       <div class="controls">
         <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
         <span class="help-block">{{errorMessage 'text'}}</span>
-        {{> tileLocationControlEdit}}
+        {{> tileAdvancedOptionsEdit}}
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
