--- a/client/templates/tiles/text/tile_submit_text.html
+++ b/client/templates/tiles/text/tile_submit_text.html
@@ -5,7 +5,7 @@
         <div class="controls">
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Tell a story..."></textarea>
             <span class="help-block">{{errorMessage 'text'}}</span>
-            {{> tileLocationControl}}
+            {{> tileAdvancedOptions}}
         </div>
     </div>
     {{> tileSubmitButton}}
