--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -19,6 +19,10 @@
         {{> tileSubmitVideo}}
       {{/if}}
 
+      {{#if isTileType 'iframe'}}
+        {{> tileSubmitIframe}}
+      {{/if}}
+
     </div><!-- popup-menu -->
   </div><!-- popup-screen -->
 </template>
