--- a/client/templates/tiles/video/tile_edit_video.html
+++ b/client/templates/tiles/video/tile_edit_video.html
@@ -15,7 +15,7 @@
           <input type="file" name="video" id="video" class="form-control" accept="video/mp4,video/x-m4v,video/*" value="">
           <span class="help-block">{{errorMessage 'video'}}</span>
           <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your video..." value="{{text}}"></textarea>
-          {{> tileLocationControlEdit}}
+          {{> tileAdvancedOptionsEdit}}
         </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
