--- a/client/templates/tiles/video/tile_submit_video.html
+++ b/client/templates/tiles/video/tile_submit_video.html
@@ -10,7 +10,7 @@
             <input type="file" name="video" id="video" class="form-control" accept="video/mp4,video/x-m4v,video/*" value="">
             <span class="help-block">{{errorMessage 'video'}}</span>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your video..."></textarea>
-            {{> tileLocationControl}}
+            {{> tileAdvancedOptions}}
         </div>
     </div>
     {{> tileSubmitButton}}
