--- a/client/templates/tiles/iframe/tile_edit_iframe.html
+++ b/client/templates/tiles/iframe/tile_edit_iframe.html
@@ -3,9 +3,9 @@
     <div class="form-group {{errorClass 'iframe'}}">
       <label class="control-label" for="iframe">Iframe</label>
       <div class="controls">
-        <textarea name="iframe" id="iframe" class="form-control" rows="5" value="{{iframe}}"></textarea>
+        <textarea name="iframe" id="iframe" class="form-control" rows="2" value="{{iframe}}"></textarea>
         <span class="help-block">{{errorMessage 'iframe'}}</span>
-        {{> tileLocationControlEdit}}
+        {{> tileAdvancedOptionsEdit}}
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
