--- a/client/templates/tiles/iframe/tile_submit_iframe.html
+++ b/client/templates/tiles/iframe/tile_submit_iframe.html
@@ -3,9 +3,9 @@
   <form name="tile" class="tile-form form">
     <div class="form-group {{errorClass 'iframe'}}">
         <div class="controls">
-            <textarea name="iframe" id="iframe" class="form-control" rows="5" placeholder="Paste iframe here..."></textarea>
+            <textarea name="iframe" id="iframe" class="form-control" rows="2" placeholder="Paste iframe code here..."></textarea>
             <span class="help-block">{{errorMessage 'iframe'}}</span>
-            {{> tileLocationControl}}
+            {{> tileAdvancedOptions}}
         </div>
     </div>
     {{> tileSubmitButton}}
