--- a/client/templates/tiles/image/tile_submit_image.html
+++ b/client/templates/tiles/image/tile_submit_image.html
@@ -10,7 +10,7 @@
             <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
             <span class="help-block">{{errorMessage 'image'}}</span>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your image..."></textarea>
-            {{> tileLocationControl}}
+            {{> tileAdvancedOptions}}
         </div>
     </div>
     {{> tileSubmitButton}}
