--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -31,5 +31,14 @@
       {{#if ownTile}}<small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEditVideo'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>{{/if}}
     {{/if}}
 
+    {{#if tileTypeIframe}}
+      {{iframe}}
+      {{#if latitude}}
+        <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
+      {{/if}}
+      {{#if ownTile}}<small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEditText'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>{{/if}}
+    {{/if}}
+
+
   </div><!-- tile-text -->
 </template>
