--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -32,7 +32,7 @@
     {{/if}}
 
     {{#if tileTypeIframe}}
-      {{iframeHtml}}
+      {{{iframeHtml}}}
       {{#if latitude}}
         <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
       {{/if}}
