Added text field to iframe

--- a/client/templates/tiles/iframe/tile_edit_iframe.html
+++ b/client/templates/tiles/iframe/tile_edit_iframe.html
@@ -5,6 +5,7 @@
       <div class="controls">
         <textarea name="iframe" id="iframe" class="form-control" rows="2" value="{{iframe}}"></textarea>
         <span class="help-block">{{errorMessage 'iframe'}}</span>
+        <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your iframe..." value="{{text}}"></textarea>
         {{> tileAdvancedOptionsEdit}}
       </div>
     </div>
