--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -33,6 +33,7 @@
 
     {{#if tileTypeIframe}}
       {{{iframeHtml}}}
+      <p>{{text}}</p>
       {{#if latitude}}
         <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
       {{/if}}
