Added a mapbox.js map

--- a/client/templates/stories/story_map.html
+++ b/client/templates/stories/story_map.html
@@ -11,7 +11,7 @@
       {{/if}}<!-- if ownStory -->
     {{/if}}
 
-    <div class="map" id="map"></div>
+    <div id="map" style="height:500px;width:100%;"></div>
 
   </div>
 </template>
