--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -40,6 +40,21 @@
       {{#if ownTile}}<small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEditIframe'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>{{/if}}
     {{/if}}
 
+    {{#if tileTypePointOfInterest}}
+      <div class="row">
+        <div class="col-xs-3">
+          <img class="img-responsive img-circle" src ="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+        </div><!-- col-xs-3 -->
+        <div class="col-xs-9">
+          <p>{{text}}</p>
+        </div><!-- col-xs-9 -->
+      </div><!-- row -->
+      {{#if latitude}}
+        <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
+      {{/if}}
+      {{#if ownTile}}<small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEditPointOfInterest'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>{{/if}}
+    {{/if}}
+
 
   </div><!-- tile-text -->
 </template>
