--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -4,7 +4,7 @@
       <a class="btn btn-primary" id="tileTypeText"><i class="fa fa-font" aria-hidden="true"></i> Text</a>
       <a class="btn btn-primary" id="tileTypeImage"><i class="fa fa-camera-retro" aria-hidden="true"></i> Image</a>
       <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a>
-      <a class="btn btn-primary" id="tileTypeIframe">&lt;iframe&gt;</a>
+      <a class="btn btn-primary" id="tileTypeIframe"><i class="fa fa-code" aria-hidden="true"></i> iframe</a>
       <a class="btn btn-primary" id="tileTypePointOfInterest"><i class="fa fa-map-marker" aria-hidden="true"></i> Point of interest</a>
 
       {{#if isTileType 'text'}}
