--- a/client/templates/tiles/point_of_interest/tile_submit_point_of_interest.html
+++ b/client/templates/tiles/point_of_interest/tile_submit_point_of_interest.html
@@ -1,17 +1,18 @@
 <template name="tileSubmitPointOfInterest">
   <hr>
   <form name="tile" class="tile-form form">
-    <div class="form-group {{errorClass 'image'}}">
-        {{#if uploadingImage 'true'}}
-          {{> uploading}}
-        {{/if}}
-        <div class="controls">
-            <div class="imageUploadThumb"></div>
-            <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
-            <span class="help-block">{{errorMessage 'image'}}</span>
-            <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your point of interest..."></textarea>
-            {{> tileAdvancedOptions}}
-        </div>
+    <div class="form-group {{errorClass 'title'}}">
+      {{#if uploadingImage 'true'}}
+        {{> uploading}}
+      {{/if}}
+      <div class="controls">
+        <input name="title" id="title" type="text" value="" placeholder="Title of this point of interest" class="form-control"/>
+        <div class="imageUploadThumb"></div>
+        <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
+        <span class="help-block">{{errorMessage 'title'}}</span>
+        <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your point of interest..."></textarea>
+        {{> tileAdvancedOptions}}
+      </div>
     </div>
     {{> tileSubmitButton}}
   </form>
