--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -43,9 +43,12 @@
     {{#if tileTypePointOfInterest}}
       <div class="row">
         <div class="col-xs-3">
-          <img class="img-responsive img-circle" src ="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+          {{#if hasImage}}
+            <img class="img-responsive img-circle" src ="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+          {{/if}}
         </div><!-- col-xs-3 -->
         <div class="col-xs-9">
+          <p class="lead">{{title}}</p>
           <p>{{text}}</p>
         </div><!-- col-xs-9 -->
       </div><!-- row -->
