--- a/client/templates/stories/story_map.html
+++ b/client/templates/stories/story_map.html
@@ -1,33 +1,13 @@
 <template name="storyMap">
   <div class="story-page page">
-    {{> storyHeader}}
-
-    {{#if currentUser}}
-      {{#if ownStory}}
-        <p class="btn-add"><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a tile</a></p>
-        {{#if showTileMenu 'true'}}
-          {{> tileMenu}}
-        {{/if}}
-      {{/if}}<!-- if ownStory -->
-    {{/if}}
+      <div class="story-header">
+        <h1>{{title}}<small> by {{author}}</small></h1>
+        <a class="btn btn-success" href="{{pathFor 'storyPage'}}"><i class="fa fa-list"></i></a>
+        {{#if ownStory}}<small><a href="{{pathFor 'storyEdit'}}"><i class="fa fa-pencil" aria-hidden="true"></i> edit</a></small>{{/if}}
+        <hr>
+      </div>
 
     <div id="map" style="height:500px;width:100%;"></div>
 
-    <script>
-      function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-
-      initMap();
-
-    </script>
   </div>
 </template>
