made map page greedy

--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -15,6 +15,7 @@
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
+            <li><a href="https://goo.gl/forms/OSrIkaFIQHBvQnqh2" target="_blank"><i class="fa fa-bug" aria-hidden="true"></i></a></li>
             <li><a><i class="fa fa-user"></i> {{currentUser.username}}</a></li>
             {{>logout}}
           {{/if}}
