--- a/client/templates/stories/story_map.html
+++ b/client/templates/stories/story_map.html
@@ -1,12 +1,3 @@
 <template name="storyMap">
-  <div class="story-page page">
-      <div class="story-header">
-        <p>{{title}}<small> by {{author}}</small></p>
-        <a class="btn btn-success" href="{{pathFor 'storyPage'}}"><i class="fa fa-list"></i></a>
-        {{#if ownStory}}<small><a href="{{pathFor 'storyEdit'}}"><i class="fa fa-pencil" aria-hidden="true"></i> edit</a></small>{{/if}}
-      </div>
-
-    <div id="map" style="height:500px;width:100%;"></div>
-
-  </div>
+    <div id="map" class="story-map"></div>
 </template>
