--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -44,7 +44,9 @@
       <div class="row">
         <div class="col-xs-3">
           {{#if hasImage}}
-            <img class="img-responsive img-circle" src ="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+            <img class="img-responsive img-circle" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/>
+          {{else}}
+            <img class="img-responsive img-circle" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/q16hdfjxnpvepkrqnvyg"/>
           {{/if}}
         </div><!-- col-xs-3 -->
         <div class="col-xs-9">
