Dropped video tile from the menu

--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -3,7 +3,7 @@
     <div class="popup-menu">
       <a class="btn btn-primary" id="tileTypeText"><i class="fa fa-font" aria-hidden="true"></i> Text</a>
       <a class="btn btn-primary" id="tileTypeImage"><i class="fa fa-camera-retro" aria-hidden="true"></i> Image</a>
-      <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a>
+      <!-- <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a> -->
       <a class="btn btn-primary" id="tileTypeIframe"><i class="fa fa-code" aria-hidden="true"></i> iframe</a>
       <a class="btn btn-primary" id="tileTypePointOfInterest"><i class="fa fa-binoculars" aria-hidden="true"></i> Point of interest</a>
 
