Basic data pulled into points

--- a/client/stylesheets/tile_iframe.css
+++ b/client/stylesheets/tile_iframe.css
@@ -2,3 +2,8 @@
   width: 100% !important;
   height: 600px !important;
 }
+
+.popup-content iframe {
+  width: 100% !important;
+  height: 250px !important;
+}
