--- a/client/templates/stories/story_edit.html
+++ b/client/templates/stories/story_edit.html
@@ -1,14 +1,23 @@
 <template name="storyEdit">
-  <form>
-    <div class="form-group {{errorClass 'title'}}">
-      <label class="control-label" for="title">Title</label>
-      <div class="controls">
-          <input name="title" id="title" type="text" value="{{title}}" placeholder="Name your story" class="form-control"/>
-          <span class="help-block">{{errorMessage 'title'}}</span>
-      </div>
-    </div>
-    <input type="submit" value="Submit" class="btn btn-primary submit"/>
-    <hr/>
-    <a class="btn btn-danger delete" href="#">Delete story</a>
-  </form>
+  <div class="story-page page">
+    {{> storyHeader}}
+
+    {{#if currentUser}}
+      {{#if ownStory}}
+        <p class="btn-add"><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a tile</a></p>
+        {{#if showTileMenu 'true'}}
+          {{> tileMenu}}
+        {{/if}}
+      {{/if}}<!-- if ownStory -->
+    {{/if}}
+
+    <div id="tile-items">
+      {{#each tiles}}
+        <div class="tile-item">
+          {{> tileItem}}
+        </div><!-- tileItem -->
+      {{/each}}
+    </div><!-- #items -->
+
+  </div>
 </template>
