Fixed scrolling issue on stories

--- a/client/stylesheets/story_map.css
+++ b/client/stylesheets/story_map.css
@@ -10,10 +10,15 @@
   margin-top: 50px;
 }
 
-.map-title a{
-  width: calc(100% - 50px);
+.map-title a {
+  width: 80%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin-top: 2px;
+}
+@media (min-width: 784px) {
+  .map-title a {
+    width: 600px;
+  }
 }
