--- a/client/templates/stories/story_header.html
+++ b/client/templates/stories/story_header.html
@@ -1,6 +1,6 @@
 <template name="storyHeader">
   <div class="story-header">
-    <h1>{{title}}<br><small>by {{author}}{{#if ownStory}} <a href="{{pathFor 'storyEdit'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a>{{/if}}</small></h1>
+    <h1>{{title}}<br><small>by {{author}}{{#if ownStory}} <a href="{{pathFor 'storySettings'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a>{{/if}}</small></h1>
     <hr>
   </div>
 </template>
