--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -9,7 +9,9 @@
   </div><!-- story-controls -->
   <div id="fullpage">
     <div class="section">
-      {{> storyHeader}}
+      <div class="story-header">
+        <h1>{{title}}<br><small>by {{author}}</small></h1>
+      </div><!-- story-header -->
     </div><!-- section -->
     {{#each tiles}}
     <div class="section">
