--- a/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
+++ b/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
@@ -13,7 +13,7 @@
           {{> tileAdvancedOptionsEdit}}
         </div>
     </div>
-    <input type="submit" value="Submit" class="btn btn-primary submit"/>
+    <input type="submit" value="Save" class="btn btn-primary submit"/>
     <hr/>
     <a class="btn btn-danger delete" href="#">Delete tile</a>
     <hr>
