--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -8,7 +8,7 @@
         {{> tileAdvancedOptionsEdit}}
       </div>
     </div>
-    <input type="submit" value="Submit" class="btn btn-primary submit"/>
+    <input type="submit" value="Save" class="btn btn-primary submit"/>
     <hr/>
     <a class="btn btn-danger delete" href="#">Delete tile</a>
     <hr/>
