More routing work

--- a/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
+++ b/client/templates/tiles/point_of_interest/tile_edit_point_of_interest.html
@@ -1,21 +1,23 @@
 <template name="tileEditPointOfInterest">
-  <form>
-    <div class="form-group {{errorClass 'image'}}">
-        {{#if uploadingImage 'true'}}
-          {{> uploading}}
-        {{/if}}
-        <div class="controls">
-          <input name="title" id="title" type="text" value="{{title}}" placeholder="Title of this point of interest" class="form-control"/>
-          <div class="imageUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/></div>
-          <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
-          <span class="help-block">{{errorMessage 'image'}}</span>
-          <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your point of interest..." value="{{text}}"></textarea>
-          {{> tileAdvancedOptionsEdit}}
-        </div>
-    </div>
-    <input type="submit" value="Save" class="btn btn-primary submit"/>
-    <hr/>
-    <a class="btn btn-danger delete" href="#">Delete tile</a>
-    <hr>
-  </form>
+  <div class="page">
+    <form>
+      <div class="form-group {{errorClass 'image'}}">
+          {{#if uploadingImage 'true'}}
+            {{> uploading}}
+          {{/if}}
+          <div class="controls">
+            <input name="title" id="title" type="text" value="{{title}}" placeholder="Title of this point of interest" class="form-control"/>
+            <div class="imageUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/image/upload/t_1500/{{imageId}}"/></div>
+            <input type="file" name="image" id="image" class="form-control" accept="image/*" value="">
+            <span class="help-block">{{errorMessage 'image'}}</span>
+            <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your point of interest..." value="{{text}}"></textarea>
+            {{> tileAdvancedOptionsEdit}}
+          </div>
+      </div>
+      <input type="submit" value="Save" class="btn btn-primary submit"/>
+      <hr/>
+      <a class="btn btn-danger delete" href="#">Delete tile</a>
+      <hr>
+    </form>
+  </div>
 </template>
