--- a/client/templates/tiles/iframe/tile_edit_iframe.html
+++ b/client/templates/tiles/iframe/tile_edit_iframe.html
@@ -1,17 +1,19 @@
 <template name="tileEditIframe">
-  <form>
-    <div class="form-group {{errorClass 'iframe'}}">
-      <label class="control-label" for="iframe">Iframe</label>
-      <div class="controls">
-        <textarea name="iframe" id="iframe" class="form-control" rows="2" value="{{iframe}}"></textarea>
-        <span class="help-block">{{errorMessage 'iframe'}}</span>
-        <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your iframe..." value="{{text}}"></textarea>
-        {{> tileAdvancedOptionsEdit}}
+  <div class="page">
+    <form>
+      <div class="form-group {{errorClass 'iframe'}}">
+        <label class="control-label" for="iframe">Iframe</label>
+        <div class="controls">
+          <textarea name="iframe" id="iframe" class="form-control" rows="2" value="{{iframe}}"></textarea>
+          <span class="help-block">{{errorMessage 'iframe'}}</span>
+          <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your iframe..." value="{{text}}"></textarea>
+          {{> tileAdvancedOptionsEdit}}
+        </div>
       </div>
-    </div>
-    <input type="submit" value="Submit" class="btn btn-primary submit"/>
-    <hr/>
-    <a class="btn btn-danger delete" href="#">Delete tile</a>
-    <hr/>
-  </form>
+      <input type="submit" value="Submit" class="btn btn-primary submit"/>
+      <hr/>
+      <a class="btn btn-danger delete" href="#">Delete tile</a>
+      <hr/>
+    </form>
+  </div>
 </template>
