dropping tile buttons when not on story edit page

--- a/client/templates/tiles/tile_buttons.html
+++ b/client/templates/tiles/tile_buttons.html
@@ -1,8 +1,10 @@
 <template name="tileButtons">
+  {{#if isStoryEditPage}}
   {{#if ownTile}}
   {{#if latitude}}
   <small><a class="btn btn-xs btn-default" target="_blank" href="https://www.google.com/maps/@{{latitude}},{{longitude}},15z"><i class="fa fa-globe" aria-hidden="true"></i></a></small>
   {{/if}}
   <small><a class="btn btn-xs btn-default" href="{{pathFor 'tileEditText'}}"><i class="fa fa-pencil" aria-hidden="true"></i></a></small>
+  {{/if}}
   {{/if}}
 </template>
