--- a/client/templates/stories/story_submit.html
+++ b/client/templates/stories/story_submit.html
@@ -1,12 +1,14 @@
 <template name="storySubmit">
-  <form>
-    <div class="form-group {{errorClass 'title'}}">
-      <label class="control-label" for="title">Title</label>
-      <div class="controls">
-          <input name="title" id="title" type="text" value="" placeholder="Name your story" class="form-control"/>
-          <span class="help-block">{{errorMessage 'title'}}</span>
+  <div class="page">
+    <form>
+      <div class="form-group {{errorClass 'title'}}">
+        <label class="control-label" for="title">Title</label>
+        <div class="controls">
+            <input name="title" id="title" type="text" value="" placeholder="Name your story" class="form-control"/>
+            <span class="help-block">{{errorMessage 'title'}}</span>
+        </div>
       </div>
-    </div>
-    <input type="submit" value="Submit" class="btn btn-primary"/>
-  </form>
+      <input type="submit" value="Submit" class="btn btn-primary"/>
+    </form>
+  </div>
 </template>
