--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -9,17 +9,17 @@
           {{#if isMap}}
             <div class="map-title"><a class="navbar-brand" href="{{pathFor 'storyPage'}}"><i class="fa fa-chevron-left"></i> {{title}}</a></div>
           {{else}}
-            <a class="navbar-brand navbar-brand-text" href="{{pathFor 'storiesList'}}"><img alt="Brand" src="https://res.cloudinary.com/orbitist/image/upload/v1482159213/logo_blue_button_100_sjpiii.png"></a>
+            <a class="navbar-brand navbar-brand-text" href="http://orbitist.com"><img alt="Brand" src="https://res.cloudinary.com/orbitist/image/upload/v1482159213/logo_blue_button_100_sjpiii.png"></a>
           {{/if}}
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
             <li><a href="https://goo.gl/forms/OSrIkaFIQHBvQnqh2" target="_blank"><i class="fa fa-bug" aria-hidden="true"></i></a></li>
-            <li><a><i class="fa fa-user"></i> {{currentUser.username}}</a></li>
+            <li><a href="{{pathFor 'storiesList'}}"><i class="fa fa-user"></i> {{currentUser.username}}</a></li>
             {{>logout}}
             {{else}}
-            <li><a href="/"><i class="fa fa-user"></i> Log in</a></li>
+            <li><a href="{{pathFor 'storiesList'}}"><i class="fa fa-user"></i> Log in</a></li>
           {{/if}}
         </ul>
       </div>
