--- a/client/stylesheets/navbar.css
+++ b/client/stylesheets/navbar.css
@@ -1,21 +1,13 @@
-.navbar {
+.navbar-toggle-orbitist {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 9999999999999999999;
+  background-color: rgba(255,255,255,0.8);
+  font-size: 20px;
 }
 
-.navbar-default {
-  background-color: white;
-  border-color: #eee;
-}
-
-.navbar-toggle {
-  border: none;
-  color: #333;
-}
-
-.navbar-collapse {
-  border-color: #eee;
-}
-
-.navbar-brand img {
+.navmenu-brand img {
   width: 30px;
   border-radius: 3px;
   margin-top: -5px;
