--- a/client/templates/includes/logout.html
+++ b/client/templates/includes/logout.html
@@ -1,3 +1,3 @@
 <template name="logout">
-    <li><a href="#" class="logout"><i class="fa fa-sign-out"></i></a></li>
+    <li><a href="#" class="logout"><i class="fa fa-sign-out"></i> Logout</a></li>
 </template>
